cmake_minimum_required(VERSION 3.5)

project(udpsh LANGUAGES C)
add_compile_options(-Wall)
add_library(udpsh-sock STATIC udpsh_sock.h  udpsh_sock.c)
if(WIN32)
    target_link_libraries(udpsh-sock ws2_32)
endif()
add_executable(udpsh-client udpsh_client.c)
target_link_libraries(udpsh-client udpsh-sock)

if(NOT WIN32)
    add_executable(udpsh-server udpsh_server.c)
    target_link_libraries(udpsh-server udpsh-sock)
endif()
