cmake_minimum_required(VERSION 3.5)
project(udpsh LANGUAGES C)
include(FindThreads)

option(USE_SSL "Support OpenSSL" ON)
if(USE_SSL)
    include(FindOpenSSL)
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
if(NOT MSVC)
    add_compile_options(-Wall)
endif()
configure_file(udpsh_config.h.in config/udpsh_config.h)
add_library(udpsh-sock STATIC udpsh_sock.h  udpsh_sock.c)
if(WIN32)
    target_link_libraries(udpsh-sock ws2_32)
endif()
if(USE_SSL AND OpenSSL_FOUND)
    target_link_libraries(udpsh-sock OpenSSL::SSL OpenSSL::Crypto)
endif()
target_include_directories(udpsh-sock PRIVATE ${CMAKE_BINARY_DIR}/config)
add_executable(udpsh-client udpsh_client.c)
target_link_libraries(udpsh-client udpsh-sock)

if(NOT WIN32)
    add_executable(udpsh-server udpsh_server.c)
    target_link_libraries(udpsh-server udpsh-sock Threads::Threads)
endif()
